Made fields visible by default, hide if not needed. Gave a warning and blocked user when they fail to provide an email. Fixed double-nested journals in metadata. Further brutalised bootstrap to remove padding.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4669,8 +4669,7 @@ a.thumbnail.active {
   color: #333;
 }
 .alert {
-  padding: 15px;
-  margin-bottom: 20px;
+  padding: 10px;
   border: 1px solid transparent;
   border-radius: 4px;
 }
